# tesis-ardrone-server

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
includes/: server.hpp  structures.hpp
includes/classes/: ardrone.hpp  uvlc.hpp
includes/core/: ardrone.hpp  drone.hpp  server.hpp  video.hpp  video_server.hpp
src/: CMakeLists.txt  ardrone.cpp  main.cpp  server.cpp  test_client.c  test_client.cpp
src/classes/: ardrone.cpp  command.cpp  config.cpp  navdata.cpp  tcp.cpp  udp.cpp  version.cpp  video.cpp
src/core/: ardrone.cpp  drone.cpp  server.cpp  video.cpp  video_server.cpp
